tools/syntax_stubs.h

int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
void free(void *p);
int strcmp(const char *a, const char *b);
typedef int64_t off_t;
#define _(s) (s)
typedef struct jfile JFILE;
typedef struct options OPTIONS;
struct jfile { char _pad[16]; };
struct high_syntax {
	struct high_syntax *next;
	char *name;
	char *subr;
	struct high_param *params;
	struct high_state **states;
	HASH *ht_states;
	ptrdiff_t nstates;
	ptrdiff_t szstates;
	struct color_def *color;
	struct high_cmd default_cmd;
	struct high_frame *stack_base;
	struct high_delim_frame *delim_stack_base;
};
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
	int (*is_punct)(struct charmap*,int);
	int (*is_print)(struct charmap*,int);
	int (*is_space)(struct charmap*,int);
	int (*is_alpha_)(struct charmap*,int);
	int (*is_alnum_)(struct charmap*,int);
	int (*to_lower)(struct charmap*,int);
	int (*to_upper)(struct charmap*,int);
};
struct options_match { char _pad[32]; };
struct macro { char _pad[48]; };
typedef struct macro MACRO;
struct options {
	OPTIONS *next;
	const char *ftype;
	struct options_match *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	off_t tab;
	int indentc;
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
extern char i_msg[];
const char *my_gettext(const char *s);
void internal_msg(const char *s);
void setlogerrs(void);
void *joe_malloc(ptrdiff_t n);
char *zdup(const char *s);
char *zlcpy(char *a, ptrdiff_t siz, const char *b);
void vsrm(char *v);
char *jfgets(char *buf, int len, JFILE *f);
int jfclose(JFILE *f);