tools/main_stubs.h

int atexit(void (*func)(void));
struct b;
 typedef struct b B;
 typedef struct p P;
struct kmap;
 typedef struct kmap KMAP;
 typedef struct macro MACRO;
struct cap;
 typedef struct cap CAP;
 typedef struct jfile JFILE;
 typedef struct vt_context VT;
typedef struct options OPTIONS;
typedef int pid_t;
/* Layout mirrors gapbuffer/types.zig B (size 632) */
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char *name;
	char _pad1[36];
	int orphan;
	int count;
	int changed;
	int backup;
	char _pad_backup[4];
	void *undo;
	char _pad_marks[88];
	OPTIONS o;
	P *oldcur;
	P *oldtop;
	P *err;
	char *current_dir;
	int shell_flag;
	int rdonly;
	int internal;
	int scratch;
	int er;
	pid_t pid;
	int out;
	VT *vt;
	int raw;
	char _pad_raw[4];
	void *db;
	void (*parseone)(struct charmap *map, const char *s, char **rtn_name, off_t *rtn_line);
};
int procrc(CAP *cap, JFILE *f, char *name);
int validate_rc(void);
int glopt(char *s, char *arg, OPTIONS *options, int set);
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
MACRO *mparse(MACRO *m, const char *buf, ptrdiff_t *sta, int secure);
KMAP *kmap_getcontext(const char *name);
extern struct charmap *locale_map;